# MuzTorgZ

./: CMakeLists.txt  README.md  main.cpp
Database/: dbmanager.cpp  dbmanager.h
Dialogs/: regdialog.cpp  regdialog.ui
Dialogs/AuthorizationDialogs/: regdialog.cpp  regdialog.h
Dialogs/UsersTableDialogs/: createuserdialog.cpp  createuserdialog.h  createuserdialog.ui
Models/: CurrentUser.cpp  CurrentUser.h  Roles.h
Tools/: Hashing.cpp  Hashing.h  MuzMsgBox.h
Windows/: authorizationwin.cpp  authorizationwin.h  authorizationwin.ui  dbwindow.cpp  dbwindow.h  dbwindow.ui
